News UAT/force-app/main/default/objects/Task__x/fields/ZCC_Call_Freeform_c__c.field-meta.xml
<CustomField>
    <fullName>ZCC_Call_Freeform_c__c</fullName>
    <externalDeveloperName>ZCC_Call_Freeform__c</externalDeveloperName>
    <label>ZCC_Call Freeform</label>
    <length>50</length>
    <type>Text</type>
</CustomField>