News UAT/force-app/main/default/objects/Task__x/fields/ZCC_DelName_c__c.field-meta.xml
<CustomField>
    <fullName>ZCC_DelName_c__c</fullName>
    <externalDeveloperName>ZCC_DelName__c</externalDeveloperName>
    <label>ZCC_DelName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>