News UAT/force-app/main/default/objects/Task__x/fields/ZCC_DurationWait_c__c.field-meta.xml
<CustomField>
    <fullName>ZCC_DurationWait_c__c</fullName>
    <externalDeveloperName>ZCC_DurationWait__c</externalDeveloperName>
    <label>ZCC_DurationWait</label>
    <length>50</length>
    <type>Text</type>
</CustomField>