News UAT/force-app/main/default/objects/Task__x/fields/ZCC_ExtCallType_c__c.field-meta.xml
<CustomField>
    <fullName>ZCC_ExtCallType_c__c</fullName>
    <externalDeveloperName>ZCC_ExtCallType__c</externalDeveloperName>
    <label>ZCC_ExtCallType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>