News UAT/force-app/main/default/objects/Task__x/fields/ZCC_PBX_Ref_Number_c__c.field-meta.xml
<CustomField>
    <fullName>ZCC_PBX_Ref_Number_c__c</fullName>
    <externalDeveloperName>ZCC_PBX_Ref_Number__c</externalDeveloperName>
    <label>ZCC PBX Ref Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>