News UAT/force-app/main/default/objects/Task__x/fields/ZCC_QueryInfo_c__c.field-meta.xml
<CustomField>
    <fullName>ZCC_QueryInfo_c__c</fullName>
    <externalDeveloperName>ZCC_QueryInfo__c</externalDeveloperName>
    <label>ZCC_QueryInfo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>